--- a/package.json
+++ b/package.json
@@ -30,17 +30,17 @@
   },
   "homepage": "https://github.com/jharris4/html-webpack-include-assets-plugin",
   "devDependencies": {
-    "cheerio": "^0.22.0",
-    "css-loader": "^0.28.1",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "html-webpack-plugin": "^2.28.0",
-    "jasmine": "^2.6.0",
-    "rimraf": "^2.5.4",
+    "cheerio": "^1.0.0-rc.2",
+    "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "html-webpack-plugin": "^2.30.1",
+    "jasmine": "^2.8.0",
+    "rimraf": "^2.6.2",
     "semistandard": "^11.0.0",
-    "style-loader": "^0.17.0",
-    "webpack": "^2.5.0"
+    "style-loader": "^0.18.2",
+    "webpack": "^3.6.0"
   },
   "dependencies": {
-    "minimatch": "^3.0.3"
+    "minimatch": "^3.0.4"
   }
 }
