--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "homepage": "https://github.com/jharris4/html-webpack-include-assets-plugin",
   "devDependencies": {
     "cheerio": "^1.0.0-rc.2",
+    "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^2.30.1",
