add slash package to ensure paths are properly joined for windows environment

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "dependencies": {
     "glob": "^7.1.2",
-    "minimatch": "^3.0.4"
+    "minimatch": "^3.0.4",
+    "slash": "^1.0.0"
   }
 }
