reset package.json
reset package.json

--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "rrd-html-webpack-include-assets-plugin",
-  "version": "1.0.6",
+  "name": "html-webpack-include-assets-plugin",
+  "version": "1.0.4",
   "description": "Add the ability to include assets based on a list of paths",
   "main": "index.js",
   "files": [
     "index.js"
   ],
   "scripts": {
+    "prepublish": "npm run test",
     "pretest": "semistandard",
     "test": "jasmine",
     "debug": "node-debug jasmine"
