--- a/package.json
+++ b/package.json
@@ -31,19 +31,19 @@
   "homepage": "https://github.com/jharris4/html-webpack-include-assets-plugin",
   "devDependencies": {
     "cheerio": "^1.0.0-rc.2",
-    "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.7",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "html-webpack-plugin": "^2.30.1",
-    "jasmine": "^2.8.0",
+    "copy-webpack-plugin": "^4.5.2",
+    "css-loader": "^1.0.0",
+    "html-webpack-plugin": "^3.2.0",
+    "jasmine": "^3.2.0",
+    "mini-css-extract-plugin": "^0.4.3",
     "rimraf": "^2.6.2",
-    "semistandard": "^11.0.0",
-    "style-loader": "^0.18.2",
-    "webpack": "^3.6.0"
+    "semistandard": "^12.0.1",
+    "style-loader": "^0.23.0",
+    "webpack": "^4.19.1"
   },
   "dependencies": {
-    "glob": "^7.1.2",
+    "glob": "^7.1.3",
     "minimatch": "^3.0.4",
-    "slash": "^1.0.0"
+    "slash": "^2.0.0"
   }
 }
