--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "cheerio": "^1.0.0-rc.2",
     "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^1.0.0",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^4.0.0-0",
     "jasmine": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.3",
     "rimraf": "^2.6.2",
