--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "2.0.0",
   "description": "Add the ability to include assets based on a list of paths",
   "main": "index.js",
+  "engines": {
+		"node": ">=8"
+	},
   "files": [
     "index.js"
   ],
