--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "css-loader": "^2.1.1",
     "express": "^4.16.4",
     "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin-4": "npm:html-webpack-plugin@4.0.0-beta.5",
     "jasmine": "^3.4.0",
     "jasmine-expect": "^4.0.1",
     "mini-css-extract-plugin": "^0.6.0",
