--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "node": ">=8"
   },
   "files": [
-    "index.js"
+    "index.js",
+    "typings.d.ts"
   ],
   "scripts": {
     "prepublish": "npm run test",
