--- a/package.json
+++ b/package.json
@@ -51,8 +51,8 @@
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
     "express": "^4.17.1",
-    "html-webpack-plugin": "^3.2.0",
-    "html-webpack-plugin-4": "npm:html-webpack-plugin@4.0.0-beta.11",
+    "html-webpack-plugin": "^4.0.1",
+    "html-webpack-plugin-3": "npm:html-webpack-plugin@3.2.0",
     "jasmine": "^3.5.0",
     "jasmine-expect": "^4.0.3",
     "mini-css-extract-plugin": "^0.9.0",
