--- a/package.json
+++ b/package.json
@@ -49,18 +49,18 @@
   "devDependencies": {
     "cheerio": "^1.0.0-rc.3",
     "copy-webpack-plugin": "^6.0.1",
-    "css-loader": "^3.4.2",
+    "css-loader": "^3.5.3",
     "express": "^4.17.1",
-    "html-webpack-plugin": "^4.0.4",
+    "html-webpack-plugin": "^4.3.0",
     "html-webpack-plugin-3": "npm:html-webpack-plugin@3.2.0",
     "jasmine": "^3.5.0",
     "jasmine-expect": "^4.0.3",
     "mini-css-extract-plugin": "^0.9.0",
-    "puppeteer": "2.1.1",
+    "puppeteer": "^3.1.0",
     "rimraf": "^3.0.2",
     "semistandard": "^14.2.0",
-    "style-loader": "^1.1.3",
-    "webpack": "^4.42.1"
+    "style-loader": "^1.2.1",
+    "webpack": "^4.43.0"
   },
   "dependencies": {
     "glob": "^7.1.6",
