--- a/package.json
+++ b/package.json
@@ -48,19 +48,18 @@
   "homepage": "https://github.com/jharris4/html-webpack-tags-plugin",
   "devDependencies": {
     "cheerio": "^1.0.0-rc.3",
-    "copy-webpack-plugin": "^6.0.4",
-    "css-loader": "^4.2.2",
+    "copy-webpack-plugin": "^6.2.1",
+    "css-loader": "^5.0.0",
     "express": "^4.17.1",
-    "html-webpack-plugin": "^4.4.1",
-    "html-webpack-plugin-3": "npm:html-webpack-plugin@3.2.0",
-    "jasmine": "^3.6.1",
-    "jasmine-expect": "^4.0.3",
-    "mini-css-extract-plugin": "^0.11.0",
-    "puppeteer": "^5.2.1",
+    "html-webpack-plugin": "^5.0.0-alpha.5",
+    "jasmine": "^3.6.2",
+    "jasmine-expect": "^5.0.0",
+    "mini-css-extract-plugin": "^1.0.0",
+    "puppeteer": "^5.3.1",
     "rimraf": "^3.0.2",
     "semistandard": "^14.2.3",
-    "style-loader": "^1.2.1",
-    "webpack": "^4.44.1"
+    "style-loader": "^2.0.0",
+    "webpack": "^5.1.3"
   },
   "dependencies": {
     "glob": "^7.1.6",
