--- a/package.json
+++ b/package.json
@@ -51,15 +51,15 @@
     "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^5.0.1",
     "express": "^4.17.1",
-    "html-webpack-plugin": "^5.0.0-beta.6",
+    "html-webpack-plugin": "^5.0.0",
     "jasmine": "^3.6.4",
     "jasmine-expect": "^5.0.0",
-    "mini-css-extract-plugin": "^1.3.4",
-    "puppeteer": "^5.5.0",
+    "mini-css-extract-plugin": "^1.3.5",
+    "puppeteer": "^7.0.0",
     "rimraf": "^3.0.2",
     "semistandard": "^16.0.0",
     "style-loader": "^2.0.0",
-    "webpack": "^5.17.0"
+    "webpack": "^5.20.1"
   },
   "dependencies": {
     "glob": "^7.1.6",
