Added missing webpack peer dependency
Signed-off-by: Slava Fomin II <slava@fomin.io>
(cherry picked from commit 36114775287133257a0cfe7a1dc1172a894f61b4)

--- a/package.json
+++ b/package.json
@@ -46,6 +46,9 @@
     "url": "https://github.com/jharris4/html-webpack-tags-plugin/issues"
   },
   "homepage": "https://github.com/jharris4/html-webpack-tags-plugin",
+  "peerDependencies": {
+    "webpack": "^5.0.0"
+  },
   "devDependencies": {
     "cheerio": "^1.0.0-rc.5",
     "copy-webpack-plugin": "^7.0.0",
